VS ApexCode/UlbergProject0/force-app/main/default/objects/CurrentOffer__c/CurrentOffer__c.object-meta.xml
<CustomObject>
    <description>Offers current</description>
    <label>CurrentOffer</label>
    <nameField>
        <label>CurrentOffer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CurrentOffers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>