VS ApexCode/UlbergProject0/force-app/main/default/objects/CurrentOffer__c/fields/Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Amount__c</fullName>
    <label>Offer Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>