VS ApexCode/UlbergProject0/force-app/main/default/objects/CurrentOffer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.ItemType__c</field>
            <operation>equals</operation>
            <valueField>Product2.ItemType__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CurrentOffers</relationshipLabel>
    <relationshipName>CurrentOffers</relationshipName>
    <type>Lookup</type>
</CustomField>