VS ApexCode/UlbergProject0/force-app/main/default/objects/CurrentOffer__c/validationRules/Product_Exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Exists</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Must have a product selected</errorMessage>
</ValidationRule>